email filter button added and scroll bar fixed

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
 @import "outlook/normalize";
 
-@import "outlook/App", "outlook/emailist";
+@import "outlook/App", "outlook/dashboard";
+
+@import "outlook/filterButtons";
